2014-09-06 MickeM
 * Added keyword rendering to settings key descriptions

2014-09-05 MickeM
 * Fixed NRPE mode selector in the installer
 * Fixed installer not reading old config

2014-09-03 MickeM
 * Fixed so warn/crit can be set to none
 * Fixed "funky logging" if log file could not be opened
 * Fixed #730 check_tasksched / most_recent_run_time not working
 * Fixed debug option for filters

2014-08-24 MickeM
 * Cleaned up cmake files and added internal gtest distribution
 * Added support for building with shared runtime

2014-08-14 MickeM
 * Fixed some documentaion issues (not using crlf on windows, lookups were wrong, alias handling was wrong, settings keys were broken, settingks keys were scoped wrong)
 * Fixed so alias descriptions in external scripts are render better

2014-08-13 MickeM
 * Fixed installer issues
 * Added firewall exception as a separate component

2014-08-12 MickeM
 * Reworked the dot-net API
   Now actually works and is much much improved.
 * Change the dotnetplugin.dll name to NSCP.Core.dll
 * Removed all "helpers" from the API and added a separate NSCP.Helpers.dll
 * All C# code is now built using cmake
 * CSharpSample plugin is now included in cmake build
 * Added protobuf_net and a compiled proto file to NSCP.Protobuf.dll
 * Much bugfixing and tweaks and changes to dot-net plugin
 * Change the directory structure of various components to make things easier to find
 * Cleaned up the cmake build a bit
 * Removed some old stale artifacts
 * Changed name of nscapi_plugin_interface.hpp to nscapi_helper_singleton.hpp to better reflect what it is
 * Fixed build on apple osx

2014-08-01 MickeM
 * Major refactoring of json handling
   now uses exact same messages as protobuf (compiled from protobuf)
 * Added json-protobuf (library to compile protobuf to json spirit)
 * Added help-pb to get help as protobuf from commands
 * Removed help-csv since help-pb is better (and built-in to inventory)