@@ -344,6 +344,7 @@ ENDIF()
 MESSAGE(STATUS " - Mongoose")
 SET(OLD_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
 SET(BUILD_SHARED_LIBS OFF)
+SET(ENABLE_SSL ON CACHE BOOL "Override SSL support")
 ADD_SUBDIRECTORY("ext/mongoose-cpp")
 SET(BUILD_SHARED_LIBS ${OLD_BUILD_SHARED_LIBS})
 MESSAGE(STATUS " - Docs")
