@@ -21,9 +21,9 @@ IF(OPENSSL_FOUND)
 	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
 	ADD_DEFINITIONS(-DUSE_SSL)
 	SET(EXTRA_LIBS ${EXTRA_LIBS} ${OPENSSL_LIBRARIES})
-	IF(NOT USE_STATIC_RUNTIME)
+	IF(WIN32 AND NOT USE_STATIC_RUNTIME)
 		SET(SRCS ${SRCS} ${OPENSSL_INCLUDE_DIR}/../inc32/openssl/applink.c)
-	ENDIF(NOT USE_STATIC_RUNTIME)
+	ENDIF(WIN32 AND NOT USE_STATIC_RUNTIME)
 ENDIF(OPENSSL_FOUND)
 
 IF(WIN32)
