@@ -28,11 +28,12 @@ IF(OPENSSL_FOUND)
 	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
 	ADD_DEFINITIONS(-DUSE_SSL)
 	SET(EXTRA_LIBS ${EXTRA_LIBS} ${OPENSSL_LIBRARIES})
+	IF(WIN32 AND NOT USE_STATIC_RUNTIME)
+		SET(SRCS ${SRCS} ${OPENSSL_INCLUDE_DIR}/../inc32/openssl/applink.c)
+	ENDIF(WIN32 AND NOT USE_STATIC_RUNTIME)
 ENDIF(OPENSSL_FOUND)
-IF(MONGOOSE_FOUND)
-	INCLUDE_DIRECTORIES(${MONGOOSE_INCLUDE_DIR})
-	SET(EXTRA_LIBS ${EXTRA_LIBS} ${MONGOOSE_LIBRARY})
-ENDIF(MONGOOSE_FOUND)
+INCLUDE_DIRECTORIES(${MONGOOSE_INCLUDE_DIR})
+SET(EXTRA_LIBS ${EXTRA_LIBS} ${MONGOOSE_LIBRARY})
 
 IF(WIN32)
 	SET(SRCS ${SRCS}
@@ -42,6 +43,9 @@ IF(WIN32)
 
 		${NSCP_DEF_PLUGIN_HPP}
 	)
+	IF(NOT USE_STATIC_RUNTIME)
+		ADD_DEFINITIONS(-DOPENSSL_APPLINK_SHIM=${OPENSSL_INCLUDE_DIR}/../inc32/openssl/applink.c)
+	ENDIF(NOT USE_STATIC_RUNTIME)
 ENDIF(WIN32)
 
 add_library(${TARGET} MODULE ${SRCS})
