@@ -1,3 +1,3 @@
 version=0.4.3
-build=26
-date=2014-09-05
+build=28
+date=2014-09-08
